# dacm

./: .gitignore  CLAUDE.md  README.md
core/: Cargo.toml  tauri.conf.json
core/capabilities/: default.json
core/icons/: icon.icns
core/migrations/00000000000000_create_projects/: up.sql
core/migrations/00000000000001_create_tasks/: up.sql
core/migrations/00000000000002_create_settings/: up.sql
core/migrations/00000000000003_rename_entities/: down.sql  up.sql
core/src/: commands.rs  constants.rs  db.rs  main.rs  models.rs  project_commands.rs  project_models.rs  schema.rs  session.rs  session_commands.rs  settings_commands.rs  settings_models.rs  sleep_commands.rs  system_commands.rs  task_commands.rs  task_models.rs  workspace_commands.rs
docs/: PRODUCT_SPEC.md
plans/: CURRENT.md  PLAN_FEATURE.md  claude-session-management-pty-xterm.md  sqlite-diesel-project-management.md  terminal-first-ux.md  terminal.md  ui-overhaul-codex-design.md
view/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
view/mocks/: mock-data.ts
view/src/: constants.ts  debug-panel.ts  main.ts  perf-overlay.ts  project-detail.ts  settings-api.ts  settings-archived.ts  settings-general.ts  settings-nav.ts  settings-worktrees.ts  sidebar.ts  start-page.ts  style.css  task-detail.ts  terminal.ts  theme.ts  toolbar.ts  types.ts  utils.ts
view/tests/: fixtures.ts  helpers.ts  integration.spec.ts  layout-redesign.spec.ts  layout.spec.ts  project-detail.spec.ts  settings-api.spec.ts  settings-archived.spec.ts  settings-general.spec.ts  (+6 more)
(+1 files in other folders)
