[package]
name = "dacm-core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["sqlite", "chrono"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sysinfo = "0.33"
